--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@HUNGVU90_npm/tea-xyz-quest",
+  "name": "HUNGVU9-tea-xyz-quest",
   "version": "1.0.0",
   "description": "Quest for tea.xyz",
   "main": "index.js",
