--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Tinh-tong-2-so",
+  "name": "Hung-Vu-2-So",
   "version": "1.0.3",
   "description": "HUNGVU90",
   "main": "index.js",
